[package]
name = "rosey-actors"
version = "0.1.0"
homepage = "https://github.com/jantap/rsmixer"
repository = "https://github.com/jantap/rsmixer"
description = "PulseAudio volume mixer written in rust"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["pulseaudio", "mixer", "volume", "tui", "cli"]
authors = ["Jan Wojcicki <jantap413@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.8"
tokio = { version = "1.3.0", features = ["full"] }
tokio-stream = { version = "0.1.4", features = ["sync"] }
futures = "0.3.5"
async-trait = "0.1.45"
anyhow = "1.0.38"
